getting circle charts to work

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
+  <script src="/assets/d3.min.js"></script>
+  <script src="/assets/vizuly_core.min.js"></script>
+  <script src="/assets/vizuly_radialprogress.min.js"></script>
 </head>
 <body class="pb-3">
   <app-root>
