adding a facebook service

--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
   <app-root>
     <loading></loading>
   </app-root>
+  <script src="//connect.facebook.net/en_US/sdk.js"></script>
 </body>
 </html>
