--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 </head>
 <body>
-  <app-root><md-spinner></md-spinner></app-root>
+  <app-root>Loading...</app-root>
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </body>
 </html>
